Update models, fixtures, tests and docs
